updated clear at bottom of scoller on feature page

--- a/public_html/feature.htm
+++ b/public_html/feature.htm
@@ -102,7 +102,8 @@
               <a href="javascript:update('home1/WhiteOak33_M.jpg', 0);"><img src="home1/WhiteOak33T.jpg" class="content" width="115" height="69" /></a> 
               <a href="javascript:update('home1/WhiteOak34.jpg', 0);"><img src="home1/WhiteOak34T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak35.jpg', 0);"><img src="home1/WhiteOak35T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak36.jpg', 0);"><img src="home1/WhiteOak36T.jpg" class="content" width="115" height="69" /></a><br style="clear:both" />
+              <a href="javascript:update('home1/WhiteOak36.jpg', 0);"><img src="home1/WhiteOak36T.jpg" class="content" width="115" height="69" /></a>
+              <br style="clear:both" />
             </div>
          </div>
         </td>
