fixed table layout of feature

--- a/public_html/feature.htm
+++ b/public_html/feature.htm
@@ -61,7 +61,7 @@
   <div id="headline" > <img src="layout/featured.jpg" alt="Tour Our Featured Home" width="397" height="25" /> </div>
   <img src="layout/Logo.png" alt="Concept Home Builders, Central Texas" width="189" height="116" class="logo" />
   <div class="slideshow">
-    <table width="560px" border="0" style="position: relative; left: 5px; margin-bottom: 40px" >
+    <table width="560px" border="0" style="table-layout:fixed; width:100%; position: relative; left: 5px; margin-bottom: 40px" >
       <tr>
         <td width="15" valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivRight('thumbs3')" onmouseout="stopMe()"><img src="gallery/lft.png" style="border: 0px; padding-bottom: 10px;" /></a> </span></td>
         <td>
