--- a/public_html/feature.htm
+++ b/public_html/feature.htm
@@ -61,7 +61,7 @@
   <div id="headline" > <img src="layout/featured.jpg" alt="Tour Our Featured Home" width="397" height="25" /> </div>
   <img src="layout/Logo.png" alt="Concept Home Builders, Central Texas" width="189" height="116" class="logo" />
   <div class="slideshow">
-    <table width="560px" border="0" style="table-layout:fixed; width:100%; position: relative; left: 5px; margin-bottom: 40px" >
+    <table width="560px" border="0" style="position: relative; left: 5px; margin-bottom: 40px" >
       <tr>
         <td width="15" valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivRight('thumbs3')" onmouseout="stopMe()"><img src="gallery/lft.png" style="border: 0px; padding-bottom: 10px;" /></a> </span></td>
         <td>
@@ -103,7 +103,7 @@
               <a href="javascript:update('home1/WhiteOak34.jpg', 0);"><img src="home1/WhiteOak34T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak35.jpg', 0);"><img src="home1/WhiteOak35T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak36.jpg', 0);"><img src="home1/WhiteOak36T.jpg" class="content" width="115" height="69" /></a><br style="clear:both" />
-        </td>
+           </td>
         <td valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivLeft('thumbs3')" onmouseout="stopMe()"><img src="gallery/rt.png" style="border: 0px; padding-bottom: 10px;" /></a> </span></td>
       </tr>
     </table>
