--- a/public_html/feature.htm
+++ b/public_html/feature.htm
@@ -61,20 +61,20 @@
   <div id="headline" > <img src="layout/featured.jpg" alt="Tour Our Featured Home" width="397" height="25" /> </div>
   <img src="layout/Logo.png" alt="Concept Home Builders, Central Texas" width="189" height="116" class="logo" />
   <div class="slideshow">
-    <table width="560px" border="0" style="position: relative; left: 5px; margin-bottom: 40px" >
+    <table width="560px" border="0" style="position: relative; left: 5px" >
       <tr>
-        <td width="15" valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivRight('thumbs3')" onmouseout="stopMe()"><img src="gallery/lft.png" style="border: 0px; padding-bottom: 10px;" /></a> </span></td>
+        <td width="15" valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivRight('thumbs3')" onmouseout="stopMe()"><img src="gallery/lft.png" style="border: 0px; padding-bottom: 50px;" /></a> </span></td>
         <td>
           <div id="thumbs3">
             <div id="scroller"> 
               <a href="javascript:update('home1/WhiteOak1.jpg', 0);"><img src="home1/WhiteOak1T.jpg" class="content" width="115" height="69" /></a>     
-              <a href="javascript:update('home1/WhiteOak2.jpg', 0);"><img src="home1/WhiteOak2T.jpg" class="content" width="115" height="69" /></a>
+              <!-- <a href="javascript:update('home1/WhiteOak2.jpg', 0);"><img src="home1/WhiteOak2T.jpg" class="content" width="115" height="69" /></a> -->
               <a href="javascript:update('home1/WhiteOak3.jpg', 0);"><img src="home1/WhiteOak3T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak4.jpg', 0);"><img src="home1/WhiteOak4T.jpg" class="content" width="115" height="69" /></a> 
+              <!-- <a href="javascript:update('home1/WhiteOak4.jpg', 0);"><img src="home1/WhiteOak4T.jpg" class="content" width="115" height="69" /></a>  -->
               <a href="javascript:update('home1/WhiteOak5.jpg', 0);"><img src="home1/WhiteOak5T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak6.jpg', 0);"><img src="home1/WhiteOak6T.jpg" class="content" width="115" height="69" /></a>
+              <!-- <a href="javascript:update('home1/WhiteOak6.jpg', 0);"><img src="home1/WhiteOak6T.jpg" class="content" width="115" height="69" /></a> -->
               <a href="javascript:update('home1/WhiteOak7.jpg', 0);"><img src="home1/WhiteOak7T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak8.jpg', 0);"><img src="home1/WhiteOak8T.jpg" class="content" width="115" height="69" /></a>
+              <!-- <a href="javascript:update('home1/WhiteOak8.jpg', 0);"><img src="home1/WhiteOak8T.jpg" class="content" width="115" height="69" /></a> -->
               <a href="javascript:update('home1/WhiteOak9.jpg', 0);"><img src="home1/WhiteOak9T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak10.jpg', 0);"><img src="home1/WhiteOak10T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak11.jpg', 0);"><img src="home1/WhiteOak11T.jpg" class="content" width="115" height="69" /></a>
@@ -82,8 +82,8 @@
               <a href="javascript:update('home1/WhiteOak13.jpg', 0);"><img src="home1/WhiteOak13T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak14.jpg', 0);"><img src="home1/WhiteOak14T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak15.jpg', 0);"><img src="home1/WhiteOak15T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak16.jpg', 0);"><img src="home1/WhiteOak16T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak17.jpg', 0);"><img src="home1/WhiteOak17T.jpg" class="content" width="115" height="69" /></a>
+              <!-- <a href="javascript:update('home1/WhiteOak16.jpg', 0);"><img src="home1/WhiteOak16T.jpg" class="content" width="115" height="69" /></a> -->
+              <!-- <a href="javascript:update('home1/WhiteOak17.jpg', 0);"><img src="home1/WhiteOak17T.jpg" class="content" width="115" height="69" /></a> -->
               <a href="javascript:update('home1/WhiteOak18.jpg', 0);"><img src="home1/WhiteOak18T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak19.jpg', 0);"><img src="home1/WhiteOak19T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak20.jpg', 0);"><img src="home1/WhiteOak20T.jpg" class="content" width="115" height="69" /></a>
@@ -94,17 +94,17 @@
               <a href="javascript:update('home1/WhiteOak25_Mod.jpg', 0);"><img src="home1/WhiteOak25T.jpg" class="content" width="115" height="69" /></a> 
               <a href="javascript:update('home1/WhiteOak26_Mod.jpg', 0);"><img src="home1/WhiteOak26T.jpg" class="content" width="115" height="69" /></a> 
               <a href="javascript:update('home1/WhiteOak27.jpg', 0);"><img src="home1/WhiteOak27T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak28.jpg', 0);"><img src="home1/WhiteOak28T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak29.jpg', 0);"><img src="home1/WhiteOak29T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak30_M2.jpg', 0);"><img src="home1/WhiteOak30T2.jpg" class="content" width="115" height="69" /></a> 
-              <a href="javascript:update('home1/WhiteOak31.jpg', 0);"><img src="home1/WhiteOak31T.jpg" class="content" width="115" height="69" /></a>
+              <!-- <a href="javascript:update('home1/WhiteOak28.jpg', 0);"><img src="home1/WhiteOak28T.jpg" class="content" width="115" height="69" /></a> -->
+              <!-- <a href="javascript:update('home1/WhiteOak29.jpg', 0);"><img src="home1/WhiteOak29T.jpg" class="content" width="115" height="69" /></a> -->
+              <!-- <a href="javascript:update('home1/WhiteOak30_M2.jpg', 0);"><img src="home1/WhiteOak30T2.jpg" class="content" width="115" height="69" /></a>  -->
+              <!-- <a href="javascript:update('home1/WhiteOak31.jpg', 0);"><img src="home1/WhiteOak31T.jpg" class="content" width="115" height="69" /></a> -->
               <a href="javascript:update('home1/WhiteOak32_M.jpg', 0);"><img src="home1/WhiteOak32T.jpg" class="content" width="115" height="69" /></a> 
               <a href="javascript:update('home1/WhiteOak33_M.jpg', 0);"><img src="home1/WhiteOak33T.jpg" class="content" width="115" height="69" /></a> 
               <a href="javascript:update('home1/WhiteOak34.jpg', 0);"><img src="home1/WhiteOak34T.jpg" class="content" width="115" height="69" /></a>
               <a href="javascript:update('home1/WhiteOak35.jpg', 0);"><img src="home1/WhiteOak35T.jpg" class="content" width="115" height="69" /></a>
-              <a href="javascript:update('home1/WhiteOak36.jpg', 0);"><img src="home1/WhiteOak36T.jpg" class="content" width="115" height="69" /></a><br style="clear:both" />
+              <!-- <a href="javascript:update('home1/WhiteOak36.jpg', 0);"><img src="home1/WhiteOak36T.jpg" class="content" width="115" height="69" /></a><br style="clear:both" /> -->
            </td>
-        <td valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivLeft('thumbs3')" onmouseout="stopMe()"><img src="gallery/rt.png" style="border: 0px; padding-bottom: 10px;" /></a> </span></td>
+        <td valign="middle"><span class="scrollNav" > <a href="#null" onmouseover="scrollDivLeft('thumbs3')" onmouseout="stopMe()"><img src="gallery/rt.png" style="border: 0px; padding-bottom: 50px;" /></a> </span></td>
       </tr>
     </table>
     <!-- end thumbs -->
@@ -118,8 +118,17 @@
     <h4> 3001 White Oak Dr </h4>
     <h4> Temple, TX 76502 </h4>
      <p class="align-left">
-       Boasting a modern design with a sophisticated timeless appeal, this 5,853 sq foot beauty offers a welcome juxtaposition with the wild bamboo growing on the 1.44 acres that is also home to a gurgling creek. Soaring ceilings and walls of windows let the nature around serve as artwork throughout. An exceptional modern kitchen that is perfectly tailored to your lifestyle has an abundance of cabinets, Quartz counters, and stainless steel KitchenAid appliances. The dining option across the kitchen island shares the warmth of a floor to ceiling double sided fireplace that anchors the room. A sceond fireplace is found in the owner's suite bedroom which is flooded with light and views of trees that dapple light through the windows. A rich intensity infuses the owner's suite bath that has a sleek oversized tub and a walk-in shower. Designed with entertaining in mind, the home includes a wet bar with built-in wine refrigerator. Perhaps the most stunning element is the recreation room which boasts an in-ground pool, hot tub, and a multitude of skylights that combine with the wall of windows for an ideal swimming experience. Function and design are perfectly blended to create harmonious spaces that are striking in simplicity and minimalistic in design to bring forth visions of Frank Lloyd Wright's work.
-     </p><p>For more information visit Shine Team Realtors in Harker Heights, Texas, or call (254) 690-4321 
+       Boasting a modern design with a sophisticated timeless appeal, this 5,853 square foot beauty offers a welcome juxtaposition with the wild bamboo growing on the 1.44 acres that is also home to a gurgling creek. Notable amenities include:</p>
+        <ul class="align-left">
+          <li>Soaring ceilings and walls of windows let the nature around serve as artwork throughout.</li>
+          <li>An exceptional modern kitchen with an abundance of cabinets, Quartz counters, and stainless steel KitchenAid appliances.</li>
+          <li>A dining option across the kitchen island which shares the warmth of a floor to ceiling double sided fireplace that anchors the room.</li>
+          <li>A sceond fireplace in the owner's suite bedroom which is flooded with light and views of trees that dapple light through the windows.</li>
+          <li>Owner's suite bath boasts a sleek oversized tub and a walk-in shower</li>
+          <li>Designed with entertaining in mind, the home includes a wet bar with built-in wine refrigerator.</li>
+        </ul>
+      <p class="align-left">Perhaps the most stunning element is the recreation room which boasts an in-ground pool, hot tub, and a multitude of skylights that combine with the wall of windows for an ideal swimming experience. Overall, function and elegance are perfectly blended in the design to create harmonious spaces that are striking in simplicity and minimalistic in complexion to bring forth visions of Frank Lloyd Wright's work.
+     </p> 
        <br />
        <br />
 <br />
@@ -149,9 +158,7 @@
  </div>
 <!-- end #container --></div>
 <script type="text/javascript">
-<!--
-var MenuBar1 = new Spry.Widget.MenuBar("main", {imgDown:"../SpryAssets/SpryMenuBarDownHover.gif", imgRight:"../SpryAssets/SpryMenuBarRightHover.gif"});
-//-->
+var MenuBar1 = new Spry.Widget.MenuBar("main", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
 </body>
 <!-- InstanceEnd --></html>
