--- a/public_html/index.htm
+++ b/public_html/index.htm
@@ -123,9 +123,7 @@
  </div>
 <!-- end #container --></div>
 <script type="text/javascript">
-<!--
-var MenuBar1 = new Spry.Widget.MenuBar("main", {imgDown:"../SpryAssets/SpryMenuBarDownHover.gif", imgRight:"../SpryAssets/SpryMenuBarRightHover.gif"});
-//-->
+var MenuBar1 = new Spry.Widget.MenuBar("main", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
 </body>
 <!-- InstanceEnd --></html>
